# Codewars_CPP

./: .gitignore  .luarc.json  .nvim.lua  CMakeLists.txt  CodewarsCPP.pro  LICENSE  Makefile  main.cpp  profile.sh
inc/: blocks_number.h  bmp.h  break_piece.h  game.hpp  game_model.h  image.h  lift.h  queens.h  rot13.cuh  rot13.h  rot13_bench.h  strip_comments.h  tip_toe_through_circles.h  vertex.h
src/: blocks_number.cpp  break_piece.cpp  game_model.cpp  lift.cpp  main.cpp  queens.cpp  rot13.cpp  rot13.cu  rot13_bench.cpp  strip_comments.cpp  tip_toe_through_circles.cpp  vertex.cpp
tests/: rot13_test.cpp  some_test.cpp
